# idris-dl

./: .gitignore  FullyConnectedNN.idr  LinearAlgebra.idr  MNIST.idr  Makefile  README.md  ROTATIONAL_MNIST_PLAN.md  Statistics.idr  TODO.md  Test.idr  TestMNIST.idr  TestNN.idr  claude.md  devlog.md  idris-dl.org  idris-gdl.org  pyproject.toml
config/: config-default.yml
lib/: FullyConnectedNN.idr  LinearAlgebra.idr  MNIST.idr  Statistics.idr  __init__.py  create_rotated_mnist.py
lib/config/: __init__.py  training.py
lib/models/: __init__.py  escnn_cnn.py  standard_cnn.py
lib/training/: __init__.py  base.py
mnist/mnist/: test-00000-of-00001.parquet  train-00000-of-00001.parquet
python/: .gitignore  explore-rotated-mnist.ipynb  pyproject.toml  visualize_rotations.py
scripts/rotational_mnist/: evaluate.py  train.py
test/: Test.idr  TestMNIST.idr  TestNN.idr
test/escnn/: __init__.py  test_pytorch_hello.py
test/experiments/rotational_mnist/: __init__.py  train_augmented.py  train_baseline.py  train_equivariant.py
test/models/: test_models.py
test/rotational_mnist/: __init__.py  mnist_loader.py  test_mnist_loader.py  test_train.py  train.py
test/utils/: create_rotated_mnist.py  parquet_to_idx.py  visualize_rotations.py
