[tool.poetry]
name = "idris-dl-python"
version = "0.1.0"
description = ""
authors = ["Benjamin Miller <benmiller179@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1"
pandas = "^2.2"
pyarrow = ">=15.0.0"
pillow = "^11.0"
scipy = "^1.14"
matplotlib = "^3.10"
jupyter = "^1.0"
torch = ">=2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
