[tool.poetry]
name = "idris-dl-python"
version = "0.1.0"
description = ""
authors = ["Benjamin Miller <benmiller179@gmail.com>"]
readme = "README.md"
packages = [{include = "lib"}, {include = "test"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1"
pandas = "^2.2"
pyarrow = ">=15.0.0"
pillow = "^11.0"
scipy = "^1.14"
matplotlib = "^3.10"
jupyter = "^1.0"
torch = ">=2.6.0"
escnn = "^1.0.11"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
